# alfred2

./: .gitignore  README.md
developer/: pyproject.toml
developer/scripts/: agent.py
developer/src/developer/: __init__.py  git_bash_controller.py
impersonated/: README.md  app.py  pyproject.toml
impersonated/src/impersonated/: __init__.py  audio.py  chatbot.py  kokoro_tts.py  tts_player.py
knowledge-manager/: README.md  dev_journal.md  pyproject.toml
knowledge-manager/scripts/: get_youtube_transcript.py  web_crawl.py
knowledge-manager/src/knowledge_manager/: __init__.py
knowledge-manager/src/knowledge_manager/crawlers/: arxiv_crawler.py  base_crawler.py  prompts.py  rss_crawler.py  summarizer_agent.py  web_crawler.py  web_crawler_agent.py
