[project]
name = "developer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GTimothee", email = "ava_punksmash@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
developer = "developer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
