[project]
name = "impersonated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GTimothee", email = "ava_punksmash@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=0.1.0", # LLM Gemini chat
    "pyttsx3>=2.90", # Offline TTS
    "python-dotenv>=1.0.0", # Load .env with GOOGLE_API_KEY
    "kokoro>=0.9.4",
    "pip>=25.2",
    "soundfile>=0.13.1",
    "pytest>=8.4.2",
    "simpleaudio>=1.0.4",
    "ipython>=9.5.0",
]

[project.scripts]
impersonated = "impersonated:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
