[project]
name = "knowledge-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GTimothee", email = "ava_punksmash@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
knowledge-manager = "knowledge_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
