[project]
name = "knowledge-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GTimothee", email = "ava_punksmash@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.4",
    "langchain-google-genai>=2.1.12",
    "youtube-transcript-api>=1.2.2",
]

[project.scripts]
knowledge-manager = "knowledge_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
